--- a/themes/Defaults.css
+++ b/themes/Defaults.css
@@ -3,6 +3,7 @@
 	color: #fff;
 	background: #000;
 	font-family: Lucida Console;
+	touch-action: manipulation;
 }
 button {
 	border: 2px solid #fff;
@@ -11,4 +12,15 @@ button {
 button:hover {
 	border: 2px solid #fb7;
 	box-shadow: 0px 0px 7px 1px #fb7;
+}
+.automatorDiv {
+	border: 3px solid #fff;
+	border-radius: 3px;
+	width: 95%;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	padding: 11px;
+}
+.optionsbtn {
+	width: 150px;
 }
